| Bug #28007 | Wrong default value for I_S.PARTITIONS.PARTITION_COMMENT | ||
|---|---|---|---|
| Submitted: | 22 Apr 2007 0:10 | Modified: | 15 Jun 2007 10:14 |
| Reporter: | Jon Stephens | Email Updates: | |
| Status: | Closed | ||
| Category: | Server: I_S | Severity: | S3 (Non-critical) |
| Version: | 5.1.18-bk | OS: | Linux |
| Assigned to: | Sergey Gluhov | Target Version: | |
| Tags: | information_schema, partitioning | ||
[22 Apr 2007 0:10]
Jon Stephens
[23 Apr 2007 4:13]
Valeriy Kravchuk
Thank you for a bug report. Verified as described.
[4 May 2007 9:03]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/26074 ChangeSet@1.2507, 2007-05-04 14:01:06+05:00, gluh@mysql.com +2 -0 Bug#28007 Wrong default value for I_S.PARTITIONS.PARTITION_COMMENT The value of the PARTITION_COMMENT column is an empty string if there is no partition comment.
[6 Jun 2007 12:49]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/28196 ChangeSet@1.2550, 2007-06-06 17:47:02+05:00, gluh@mysql.com +5 -0 Bug#28007 Wrong default value for I_S.PARTITIONS.PARTITION_COMMENT The value of the PARTITION_COMMENT column is an empty string if there is no partition comment.
[14 Jun 2007 19:01]
Bugs System
Pushed into 5.1.20-beta
[15 Jun 2007 10:14]
Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.
If necessary, you can access the source repository and build the latest available
version, including the bug fix. More information about accessing the source trees is
available at
http://dev.mysql.com/doc/en/installing-source.html
Documented bugfix in 5.1.20 changelog.
